Quick Start & Examples/Headers Based Traffic/ISTIO/Host-Level/CanaryService.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service-headers
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rollout-headers-test
