Quick Start & Examples/Headers Based Traffic/ISTIO/Host-Level/StableService.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-service-headers
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: rollout-headers-test
