Quick Start & Examples/Headers Based Traffic/ISTIO/Host-Level/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
spec:
  gateways:
    - istio-host-split-gateway
  hosts:
    - demo-header.example.com
  http:
    - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
      route:
        - destination:
            host: stable-service-headers
            port:
              number: 80
          weight: 100
        - destination:
            host: canary-service-headers
            port:
              number: 80
          weight: 0
